Bug 1968659 - Ensure S/MIME label is not line-wrapped. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D253816

--HG--
extra : amend_source : 45d6ec2ff519ed0e6d7fcd0319db017583bb4eff

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -529,14 +529,19 @@ button.email-action-button {
 
 .crypto-label {
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .crypto-button {
-  display: inline-block;
   margin-block: 0;
   margin-inline-end: 3px;
   fill: currentColor;
   background-color: transparent;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: row;
+  gap: 3px;
 
   &[hidden] {
     display: none;
